equals.